ISIS-2959: change z-index of footer, such that menu items render with higher z-index

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -78,6 +78,10 @@ body {
     margin-bottom: 0px;
 }
 
+footer > .navbar {
+    z-index: 1;
+}
+
 #veil {
     z-index: 40000;
     background-image: none;
