ISIS-2877: regression: fixes missing tree theme

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/tree/ParentedTreePanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/tree/ParentedTreePanel.html
@@ -27,8 +27,9 @@
 		<div class="scalarNameAndValueComponentType"
 			wicket:id="scalarTypeContainer">
 
-			<wicket:container wicket:id="scalarIfRegular"></wicket:container>
-			<wicket:container wicket:id="scalarIfCompact"></wicket:container>
+			<wicket:container wicket:id="scalarIfRegular" />
+			<wicket:container wicket:id="scalarIfCompact" />
+			
 		</div>
 	</wicket:panel>
 </body>
