--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/blobclob/IsisBlobOrClobPanelAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/blobclob/IsisBlobOrClobPanelAbstract.html
@@ -22,15 +22,13 @@
         <wicket:panel>
 
             <div class="scalarNameAndValueComponentType"
-                 wicket:id="scalarTypeContainer"
-            >
+                 wicket:id="scalarTypeContainer">
 
                 <div class="form-group"
                      wicket:id="scalarIfRegular">
 
                     <label class="scalarName col-form-label"
-                           wicket:id="scalarName"
-                    >[Label text]</label>
+                           wicket:id="scalarName">[Label text]</label>
 
                     <span class="scalarValueWrapper">
 
@@ -45,21 +43,31 @@
                                         <span class="uploadFile form-text">
                                             <input type="file" name="scalarValue" wicket:id="scalarValue" />
                                         </span>
-                                        <a wicket:id="scalarIfRegularClear" class="btn btn-primary btn-sm"><span class="clearTitle">Clear</span></a>
+                                        <a wicket:id="scalarIfRegularClear" class="btn btn-primary btn-sm">
+                                        	<span class="clearTitle">Clear</span>
+                                       	</a>
 
-                                        <a class="download btn btn-sm btn-primary" wicket:id="scalarIfRegularDownload"><span class="downloadTitle">Download</span></a>
-                                        &nbsp;
-                                        <span class="fileName" wicket:id="fileName">[filename]</span><span>&nbsp;</span>
+										<span class="fileName" wicket:id="fileName">[filename]</span>
+
+                                        <a href="##"
+                                           class="download btn btn-sm btn-link" 
+                                           wicket:id="scalarIfRegularDownload">
+                                        	<span class="downloadIcon fa fa-download"></span>
+                                       	</a>
+                                       	
+                                       	<a href="##"
+                                           class="edit btn btn-sm btn-link" 
+                                           wicket:id="editProperty">
+                                        	<span class="editIcon fa fa-edit"></span>
+                                       	</a>
+                                        
                                     </span>
-
-                                    <a href="#"
-                                       class="edit fa fa-edit"
-                                       wicket:id="editProperty" ></a>
+                                    
                                 </span>
                             </span>
                             <span class="associatedActionLinksRight"
-                                  wicket:id="associatedActionLinksRight"
-                            >[drop down]</span>
+                                  wicket:id="associatedActionLinksRight">[drop down]
+                            </span>
                         </div>
                         <span wicket:id="feedback" class="form-text"></span>
                         <span wicket:id="associatedActionLinksBelow"></span>
