ISIS-2877: html template fixes

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelTextFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelTextFieldAbstract.html
@@ -48,10 +48,12 @@
                                 </a>
 
                                 <wicket:container wicket:id="scalarValueContainer"/>
-
+                                   
                                 <a href="##"
-                                   class="edit fa fa-edit"
-                                   wicket:id="editProperty"></a>
+                                        class="edit btn btn-sm btn-link" 
+                                        wicket:id="editProperty">
+                                     	<span class="editIcon fa fa-edit"></span>
+                                </a>
                             </span>
                         </span>
 
