--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/primitive/BooleanPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/primitive/BooleanPanel.html
@@ -46,9 +46,11 @@
                                            class="scalarValue"
                                            wicket:id="scalarValue" />
 
-                                    <a href="#"
-                                       class="edit fa fa-edit"
-                                       wicket:id="editProperty" ></a>
+                                    <a href="##"
+                                        class="edit btn btn-sm btn-link" 
+                                        wicket:id="editProperty">
+                                     	<span class="editIcon fa fa-edit"></span>
+                                	</a>
 
                                     <a href="#"
                                        name="scalarValueInlinePromptLink"
