--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/valuechoices/ValueChoicesSelect2Panel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/valuechoices/ValueChoicesSelect2Panel.html
@@ -48,9 +48,12 @@
                                     </a>
 
                                     <select class="choices form-control-sm select2-remote" wicket:id="scalarValue"></select>
-                                    <a href="#"
-                                       class="edit fa fa-edit"
-                                       wicket:id="editProperty"></a>
+                                    
+                                    <a href="##"
+                                        class="edit btn btn-sm btn-link" 
+                                        wicket:id="editProperty">
+                                     	<span class="editIcon fa fa-edit"></span>
+                                	</a>
                                 </span>
                             </span>
                             <span class="associatedActionLinksRight"
