--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/reference/ReferencePanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/reference/ReferencePanel.html
@@ -50,9 +50,11 @@
                                         </span>
                                         <span wicket:id="entityTitleIfNull">(none)</span>
 
-                                        <a href="#"
-                                           class="edit fa fa-edit"
-                                           wicket:id="editProperty"></a>
+                                        <a href="##"
+		                                        class="edit btn btn-sm btn-link" 
+		                                        wicket:id="editProperty">
+		                                     	<span class="editIcon fa fa-edit"></span>
+		                                </a>
 
                                         <a href="#"
                                            name="scalarValueInlinePromptLink"
