ISIS-2877: allow text based components to replace inline prompt label with edit link icon

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelTextFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelTextFieldAbstract.html
@@ -83,6 +83,13 @@
                 wicket:id="scalarValue" />
     </wicket:fragment>
 
+	<wicket:fragment wicket:id="editIconAsInlinePrompt">
+        <button class="edit btn btn-sm btn-link" 
+                wicket:id="scalarValue">
+             	<span class="editIcon fa fa-edit"></span>
+        </button>
+    </wicket:fragment>
+
     <wicket:fragment wicket:id="textInlinePrompt">
         <span wicket:id="scalarValue"></span>
     </wicket:fragment>
