ISIS-2877: minor refactoring
- on createFormComponent pass over the component id

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelWithFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelWithFormFieldAbstract.html
@@ -44,17 +44,17 @@
 								<a
 									href="##" class="edit btn btn-sm btn-link"
 									wicket:id="editProperty"> 
-									<span class="editIcon fa fa-edit"></span>
+									<span class="editIcon fa fa-edit"/>
 								</a>
 							</span>
 						</span> 
 						<span class="associatedActionLinksRight"
 							wicket:id="associatedActionLinksRight">[drop down]</span>
 					</div> 
-					<span wicket:id="feedback" class="form-text"></span> 
-					<span wicket:id="associatedActionLinksBelow"></span>
+					<span wicket:id="feedback" class="form-text"/> 
+					<span wicket:id="associatedActionLinksBelow"/>
 				</span>
-				<div class="clearfix"></div>
+				<div class="clearfix"/>
 			</div>
 
 			<div class="inlinePromptForm"
@@ -76,24 +76,22 @@
 		<wicket:fragment wicket:id="fragmentValueAsTextarea">
 			<textarea wicket:id="scalarValue" name="scalarValue"
 				class="form-control form-control-sm scalarValue"
-				data-isis-focus="true">
-        </textarea>
+				data-isis-focus="true" />
 		</wicket:fragment>
 
 		<wicket:fragment wicket:id="fragmentValueAsEditIconAsInlinePrompt">
 			<button class="edit btn btn-sm btn-link" wicket:id="scalarValue">
-				<span class="editIcon fa fa-edit"></span>
+				<span class="editIcon fa fa-edit"/>
 			</button>
 		</wicket:fragment>
 
 		<wicket:fragment wicket:id="fragmentValueAsTextInlinePrompt">
-			<span wicket:id="scalarValue"></span>
+			<span wicket:id="scalarValue"/>
 		</wicket:fragment>
 
 		<wicket:fragment wicket:id="fragmentValueAsTextareaInlinePrompt">
 			<textarea wicket:id="scalarValue"
-				class="form-control form-control-sm scalarPrompt" readonly="true">
-        </textarea>
+				class="form-control form-control-sm scalarPrompt" readonly="true"/>
 		</wicket:fragment>
 
 		<wicket:fragment wicket:id="fragmentValueAsDateInput">
@@ -110,7 +108,7 @@
 		</wicket:fragment>
 
 		<wicket:fragment wicket:id="fragmentCompactAsSpan">
-			<span wicket:id="scalarIfCompact"></span>
+			<span wicket:id="scalarIfCompact"/>
 		</wicket:fragment>
 
 	</wicket:panel>
