ISIS-2892: css: fixes drop-up direction

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -588,6 +588,8 @@ ul.dropdown-menu {
 .dropup ul.dropdown-menu {
 	padding-bottom: 0;
 	margin-bottom: 0;
+	top: auto;
+	bottom: 100%;
 }
 
 /* removes the caret (arrow down) from the additional links selector dropdowns */
