--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-flatly.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-flatly.css
@@ -17,6 +17,14 @@
  *  under the License.
  */
 
+/* fixate menu label color on hover */
+.bg-primary .navbar-nav .nav-link.active, 
+.bg-primary .navbar-nav .nav-link:focus, 
+.bg-primary .navbar-nav .nav-link:hover, 
+.bg-primary .navbar-nav .show > .nav-link {
+	color: white !important;
+}
+
 .select2-container.input-sm .select2-choice,
 .input-group-sm .select2-container .select2-choice {
     height: 33px;
