ISIS-2892: css: hide border on tfoot

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -301,6 +301,10 @@ footer > .navbar {
     margin-bottom: 0px;
 }
 
+.collectionContentsAsAjaxTablePanel tfoot tr {
+ 	border: none;
+}
+
 
 /* from CollectionContentsMultipleViewsPanel.css */
 /* AND ALSO duplicated in from EntityLinksSelectorPanel.css */
