ISIS-2892: css: iconAndTitle underline fix

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/bootstrap-overrides-all-v2.css
@@ -1127,8 +1127,11 @@ h4.iconAndTitle a {
 h4.iconAndTitle a span.entityTitle:focus {
     outline: none;
 }
-h4.iconAndTitle a:focus {
+h4.iconAndTitle a {
     text-decoration: none;
+}
+h4.iconAndTitle a:hover {
+	text-decoration: underline;
 }
 
 li.list-separator {
