ISIS-2892: fixes CollectionPresentationSelectorPanel for Bootstrap 5.1

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/collection/selector/CollectionPresentationSelectorPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/collection/selector/CollectionPresentationSelectorPanel.html
@@ -22,7 +22,7 @@
 <wicket:panel>
     <div class="linksSelectorPanel">
         <div class="btn-group viewLinks" wicket:id="views">
-            <button type="button" class="btn btn-sm btn-info dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="btn btn-sm btn-info dropdown-toggle" data-bs-toggle="dropdown">
             	<span wicket:id="viewButtonIcon" class="ViewLinkItem"></span>
                 <span wicket:id="viewButtonTitle" class="ViewLinkItemTitle"></span>
                 <span class="caret"></span>
@@ -30,7 +30,8 @@
             <ul wicket:id="viewList" class="dropdown-menu dropdown-menu-right" role="menu">
                 <li wicket:id="viewItem" class="viewItem">
                     <a href="#" wicket:id="viewLink" class="dropdown-item">
-                        <span wicket:id="viewItemIcon" class="ViewLinkItem"></span> <span wicket:id="viewItemTitle" class="ViewLinkItemTitle">[link title]</span>
+                        <span wicket:id="viewItemIcon" class="ViewLinkItem"></span>
+                        <span wicket:id="viewItemTitle" class="ViewLinkItemTitle">[link title]</span>
                     </a>
                 </li>
             </ul>
