ISIS-2892: more Bootstrap 5.1 fixes

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/footer/FooterPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/footer/FooterPanel.html
@@ -27,7 +27,7 @@
 
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar-collapse-footer">
+                    <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-target="#navbar-collapse-footer">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
