--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/header/HeaderPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/header/HeaderPanel.html
@@ -28,7 +28,7 @@
             <span wicket:id="brandText"></span>
             <img class="navbar-brand-logo" alt="Brand" wicket:id="brandLogo"/>
         </a>
-        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse.app-actions" aria-expanded="false" aria-label="Toggle navigation">
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-target=".navbar-collapse.app-actions" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse app-actions mr-auto">
@@ -38,7 +38,7 @@
             <ul class="navbar-nav" wicket:id="secondaryMenuBar"></ul>
             <ul class="navbar-nav tertiary">
                 <li class="nav-item dropdown">                        	
-                    <a href="#" class="nav-link dropdown-toggle" id="tertiaryDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="#" class="nav-link dropdown-toggle" id="tertiaryDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span wicket:id="userIcon">
                             <i class="fa fa-fw fa-user"></i>
                         </span>
