--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/widgets/themepicker/ThemeChooser.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/widgets/themepicker/ThemeChooser.html
@@ -21,7 +21,7 @@
     <body>
         <wicket:panel>
         	<div class="btn-group dropup">
-	            <a href="#" tabindex="-1" class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">
+	            <a href="#" tabindex="-1" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">
 	            	Change theme <span class="caret"></span>
 	            </a>
 	            <ul class="dropdown-menu dropdown-menu-right" role="menu">
