--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/footer/FooterPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/footer/FooterPanel.html
@@ -18,48 +18,51 @@
   under the License.
 -->
 <html xmlns:wicket="http://wicket.apache.org">
-    <body>
-        <wicket:panel>
+<body>
+	<wicket:panel>
 
-            <footer>
-			<nav class="navbar navbar-expand-md fixed-bottom bg-light" role="navigation">
-            
+		<footer>
+			<nav class="navbar navbar-expand-md fixed-bottom bg-light"
+				role="navigation">
 
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggler collapsed" data-bs-toggle="collapse" data-target="#navbar-collapse-footer">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
 
-                <div class="collapse navbar-collapse navbar-wrap" id="navbar-collapse-footer">
-                    <form class="navbar-nav form-inline">
-                        <span wicket:id="breadcrumbs"></span>
-                    </form>
-                    <ul class="navbar-nav mr-auto">
-                    </ul>
-                    <span class="navbar-text">
-                    	<span class="powered-by" wicket:id="creditsLabel">Credits:</span>
-                    </span>
-                    <ul class="navbar-nav">
-                        <li class="nav-item" wicket:id="creditItems">
-                            <a class="nav-link" tabindex="-1" wicket:id="creditLink" >
-                                <img wicket:id="creditImage" class="footer-image"/>
-                                <span wicket:id="creditName" class="creditName"></span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a wicket:id="aboutLink" tabindex="-1" id="aboutLink" class="nav-link">
-                                <span  class="aboutMessage" wicket:id="aboutMessage">About</span>
-                                <i wicket:id="devModeWarning" class="fa fa-lg fa-warning text-danger" title="Running in Prototype (Development) mode!"/>
-                            </a>
-                        </li>
-                        <li class="nav-item" wicket:id="themePicker"></li>
-                    </ul>
-                </div>
-            </div>
+				<div class="container-fluid">
+					<div class="navbar-footer">
+						<button type="button" class="navbar-toggler collapsed"
+							data-bs-toggle="collapse" data-bs-target="#navbar-collapse-footer">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+					</div>
+
+					<div class="collapse navbar-collapse navbar-wrap"
+						id="navbar-collapse-footer">
+						<form class="navbar-nav form-inline">
+							<span wicket:id="breadcrumbs"></span>
+						</form>
+						<ul class="navbar-nav mr-auto">
+						</ul>
+						<span class="navbar-text"> <span class="powered-by"
+							wicket:id="creditsLabel">Credits:</span>
+						</span>
+						<ul class="navbar-nav">
+							<li class="nav-item" wicket:id="creditItems"><a
+								class="nav-link" tabindex="-1" wicket:id="creditLink"> <img
+									wicket:id="creditImage" class="footer-image" /> <span
+									wicket:id="creditName" class="creditName"></span>
+							</a></li>
+							<li class="nav-item"><a wicket:id="aboutLink" tabindex="-1"
+								id="aboutLink" class="nav-link"> <span class="aboutMessage"
+									wicket:id="aboutMessage">About</span> <i
+									wicket:id="devModeWarning"
+									class="fa fa-lg fa-warning text-danger"
+									title="Running in Prototype (Development) mode!" />
+							</a></li>
+							<li class="nav-item" wicket:id="themePicker"></li>
+						</ul>
+					</div>
+				</div>
 			</nav>
-            </footer>
-        </wicket:panel>
-    </body>
+		</footer>
+	</wicket:panel>
+</body>
 </html>
