--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/footer/FooterPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/footer/FooterPanel.html
@@ -22,14 +22,16 @@
 	<wicket:panel>
 
 		<footer>
-			<nav class="navbar navbar-expand-md fixed-bottom bg-light"
+			<nav class="navbar navbar-expand-md fixed-bottom navbar-light bg-light"
 				role="navigation">
-
 
 				<div class="container-fluid">
 					<div class="navbar-footer">
-						<button type="button" class="navbar-toggler collapsed"
-							data-bs-toggle="collapse" data-bs-target="#navbar-collapse-footer">
+						<button class="navbar-toggler" type="button"
+							data-bs-toggle="collapse"
+							data-bs-target="#navbar-collapse-footer"
+							aria-controls="navbarToggleExternalContent" aria-expanded="false"
+							aria-label="Toggle navigation">
 							<span class="navbar-toggler-icon"></span>
 						</button>
 					</div>
