ISIS-2877: rename scalarValueInlinePromptLabel -> container-scalarValue-outputFormat

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -38,13 +38,13 @@
 									href="##" name="scalarValueInlinePromptLink"
 									class="scalarValueInlinePromptLink">
 									
-									<!-- populated from fragments --> 
+									<!-- output format --> 
 									<wicket:container 
-										wicket:id="scalarValueInlinePromptLabel"/> 
+										wicket:id="container-scalarValue-outputFormat"/> 
 										 
 								</a> 
 							
-								<!-- populated from fragments -->
+								<!-- input format -->
 								<wicket:container 
 										wicket:id="scalarValueContainer" />
 								
