ISIS-2877: rename scalarValueContainer -> container-scalarValue-inputFormat

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -46,7 +46,7 @@
 							
 								<!-- input format -->
 								<wicket:container 
-										wicket:id="scalarValueContainer" />
+										wicket:id="container-scalarValue-inputFormat" />
 								
 								<a href="##" class="edit btn btn-sm btn-link"
 									wicket:id="editProperty"> 
