ISIS-2877: minor refactoring and test fixes

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -48,8 +48,8 @@
 								<wicket:container 
 										wicket:id="container-scalarValue-inputFormat" />
 								
-								<a href="##" class="edit btn btn-sm btn-link"
-									wicket:id="editProperty"> 
+								<a wicket:id="editProperty"
+									href="##" class="edit btn btn-sm btn-link"> 
 									<span class="editIcon fa fa-edit"/>
 								</a>
 										  
