ISIS-2877: separation of concerns: let ScalarPanelAbstract handle frame switching

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -45,9 +45,9 @@
 										 
 								</a> 
 							
-								<!-- input format -->
+								<!-- container scalarValue -->
 								<wicket:container 
-										wicket:id="container-scalarValue-inputFormat" />
+										wicket:id="container-scalarValue" />
 								
 								<a wicket:id="editProperty"
 									href="##" class="edit btn btn-sm btn-link"> 
