ISIS-2877: prepare removal of TextFieldVariant

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/ScalarPanelFormFieldAbstract.html
@@ -45,9 +45,9 @@
 										 
 								</a> 
 							
-								<!-- container scalarValue -->
+								<!-- input format (when editing or action dialog) -->
 								<wicket:container 
-										wicket:id="container-scalarValue" />
+										wicket:id="container-scalarValue-inputFormat" />
 								
 								<a wicket:id="editProperty"
 									href="##" class="edit btn btn-sm btn-link"> 
