ISIS-2877: bootstrap: fieldset property spacing fix

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/entity/fieldset/PropertyGroup.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/entity/fieldset/PropertyGroup.html
@@ -31,7 +31,9 @@
                     </div>
                     <div class="properties card-body">
                         <div wicket:id="properties">
-                            <div wicket:id="property" class="property">[property]</div>
+                        	<div class="row mb-3">
+                            	<div wicket:id="property" class="property">[property]</div>
+                            </div>
                         </div>
                     </div>
                 </div>
