ISIS-2877: css: render property names less prominent

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/image/JavaAwtImagePanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/image/JavaAwtImagePanel.html
@@ -22,7 +22,8 @@
         <wicket:panel>
             <div class="javaAwtImagePanel image scalarPanel">
                 <label >
-                    <span wicket:id="scalarName" class="scalarName">[Label text]</span>
+                    <span wicket:id="scalarName" 
+                    	class="scalarName">[Label text]</span>
                     <span class="scalarValue">
                         <img wicket:id="scalarValue"/>
                     </span>
