--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/primitive/BooleanPanel_labelRightPosition.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/primitive/BooleanPanel_labelRightPosition.html
@@ -42,8 +42,8 @@
                                        class="scalarValue"
                                        wicket:id="scalarValue" />
 
-                                <label class="scalarName col-form-label"
-                                       wicket:id="scalarName"
+                                <label wicket:id="scalarName"
+                                	class="scalarName col-form-label"
                                 >[Label text]</label>
 
                                 <a href="#"
