--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/blobclob/IsisBlobOrClobPanelAbstract.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/blobclob/IsisBlobOrClobPanelAbstract.html
@@ -27,8 +27,8 @@
                 <div class="form-group"
                      wicket:id="scalarIfRegular">
 
-                    <label class="scalarName col-form-label"
-                           wicket:id="scalarName">[Label text]</label>
+                    <label wicket:id="scalarName"
+                    	class="scalarName col-form-label">[Label text]</label>
 
                     <span class="scalarValueWrapper">
 
