--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/valuechoices/ValueChoicesSelect2Panel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/components/scalars/valuechoices/ValueChoicesSelect2Panel.html
@@ -30,8 +30,8 @@
                 <div class="form-group"
                      wicket:id="scalarIfRegular">
 
-                    <label class="scalarName col-form-label"
-                           wicket:id="scalarName"
+                    <label wicket:id="scalarName"
+                    	class="scalarName col-form-label"
                     >[Label text]</label>
 
                     <span class="scalarValueWrapper">
